changes so server is in accordance with various client implementations